{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 16,
  "lineage": "e24a2744-397f-b0eb-08bc-0981883e138d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:internet-gateway/igw-022ff7b135c941bdb",
            "id": "igw-022ff7b135c941bdb",
            "owner_id": "958661899676",
            "vpc_id": "vpc-0cdcd0bf9401b7007"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0451e9ed6c434777e3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0451e9ed6c434777e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-014ed5bba475b8036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.vpc1_route_table",
            "aws_vpc.vpc1",
            "aws_vpc.vpc2",
            "aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02257cd6538975876179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02257cd6538975876",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-014ed5bba475b8036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.vpc2_route_table",
            "aws_vpc.vpc1",
            "aws_vpc.vpc2",
            "aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-022ff7b135c941bdb",
            "id": "r-rtb-0451e9ed6c434777e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0451e9ed6c434777e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.vpc1_route_table",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:route-table/rtb-0451e9ed6c434777e",
            "id": "rtb-0451e9ed6c434777e",
            "owner_id": "958661899676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022ff7b135c941bdb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-014ed5bba475b8036"
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cdcd0bf9401b7007"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:route-table/rtb-02257cd6538975876",
            "id": "rtb-02257cd6538975876",
            "owner_id": "958661899676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-014ed5bba475b8036"
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00a1ac84c97938f31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-0da0a713c345177f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da0a713c345177f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0cdcd0bf9401b7007"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-00dc5292b12610f0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dc5292b12610f0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-00a1ac84c97938f31"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:vpc/vpc-0cdcd0bf9401b7007",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1d0e6d758213674",
            "default_route_table_id": "rtb-02459098a1db56500",
            "default_security_group_id": "sg-019221a3bf9dd843f",
            "dhcp_options_id": "dopt-84beeeff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cdcd0bf9401b7007",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02459098a1db56500",
            "owner_id": "958661899676",
            "tags": {
              "Name": "first-vpc"
            },
            "tags_all": {
              "Name": "first-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:vpc/vpc-00a1ac84c97938f31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08f8c9c3d5a16848a",
            "default_route_table_id": "rtb-0b2b61a42ee4bee7b",
            "default_security_group_id": "sg-00cdf3078d472a135",
            "dhcp_options_id": "dopt-84beeeff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a1ac84c97938f31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2b61a42ee4bee7b",
            "owner_id": "958661899676",
            "tags": {
              "Name": "second-vpc"
            },
            "tags_all": {
              "Name": "second-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-014ed5bba475b8036",
            "peer_owner_id": "958661899676",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-00a1ac84c97938f31",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-0cdcd0bf9401b7007"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "id": "pcx-014ed5bba475b8036",
            "peer_owner_id": "958661899676",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-00a1ac84c97938f31",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-0cdcd0bf9401b7007",
            "vpc_peering_connection_id": "pcx-014ed5bba475b8036"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "aws_vpc.vpc2",
            "aws_vpc_peering_connection.peering"
          ]
        }
      ]
    }
  ]
}